@@ -1,3 +1,11 @@
+2014-07-01  Alex Christensen  <achristensen@webkit.org>
+
+        [iOS] Unreviewed build fix after r170640.
+
+        * page/EditorClient.h:
+        (WebCore::EditorClient::selectedTelephoneNumberRangesChanged):
+        Add ifdefs to make everything compile and link.
+
 2014-07-01  Daniel Bates  <dabates@apple.com>
 
         Remove unnecessary calls to std::move()
